2003-06-18  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-06-15  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/menu.c: (item_event): fixed bug #752703 (from Olivier Berger) : Better user warning message
	* src/boards/canallock.c: fixed deadlock, speeded the locks moves, added canvas update

2003-06-09  Bruno Coudoin  <bruno.coudoin@free.fr>

	* TODO: Added Dynamic screen/skin resolution change
	* src/gcompris/oggplayer.c: (decode_ogg_file), (erase_credits),
	(display_ogg_file_credits): added way to display credit info from ogg
	* src/gcompris/soundutil.c: (initSound), (scheduler_bgnd),
	(thread_play_ogg): added background music support

2003-06-03  Bruno Coudoin  <bruno.coudoin@free.fr>

	* configure.in : removed gnome-common-init, added gnome-compile-warning

	
2003-06-03  Uwe Koloska <uwe@koloro.de>

	reviewed by: Bruno Coudoin

	* src/boards/hanoi.c: (hanoi_create_item): code cleanup
	* src/boards/money.c: (process_ok): code cleanup
	* src/gcompris/bonus.c: (gcompris_display_bonus): code cleanup
	* src/gcompris/gcompris-edit.c: (add_menu), (parse_doc),
	(read_xml_file), (main): code cleanup

2003-05-25  Jose JORGE  <jose.jorge@oreka.com>

	* configure.in : released version 3.1
	* boards/sounds/pt/geography/*.ogg: added all european country sounds
	* boards/submarine/asw_frigate.png: replace the war boat with a peace boat
	* boards/submarine/mine.png: replace the mine with a whale (by bruno)

2003-05-22  Bruno Coudoin  <bruno.coudoin@free.fr>

	* boards/geography/board3_0.xml.in: added reference to country sounds
	* boards/geography/board4_0.xml.in: added reference to country sounds
	* po/fr.po: updated

2003-05-22  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs (Czech) to ALL_LINGUAS.

2003-05-21  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/pythontest.py: added explanation
	* src/boards/shapegame.c: (item_event_ok): added update to fix refresh
