@@ -1,7 +1,7 @@
 .dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/gcompris/gcompris.c)
-AM_INIT_AUTOMAKE(gcompris, 3.1)
+AM_INIT_AUTOMAKE(gcompris, 3.2)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
